# red-hat-ai-examples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  TESTING.md  financial_reports_tutorial.md  pyproject.toml
examples/ray/data/rag/: .rayignore  README.md  docling_milvus_process.py  pyproject.toml  rag_ingestion.ipynb  rag_query.ipynb
examples/ray/data/rag/manifests/: raycluster-rag-optimized.yaml
examples/ray/data/rag/ray-data-pipeline/: .env.example  .gitignore  README.md  docling_milvus_process.py  fetch_sample_pdfs.sh  pyproject.toml  rag_helpers.py  rag_ingestion.ipynb  rag_query.ipynb  validate_prerequisites.sh
examples/ray/data/rag/ray-data-pipeline/manifests/: inferenceservice-mistral.yaml  raycluster-rag-optimized.yaml
tests/: AGENTS.md  README.md  __init__.py  conftest.py  pyproject.toml
tests/examples/: __init__.py
tests/examples/agentic_evaluation/: conftest.py  test_smoke.py
tests/examples/knowledge_tuning/: __init__.py  conftest.py  test_knowledge_utils.py  test_smoke.py
tests/examples/knowledge_tuning/mocks/: __init__.py
tests/format_checks/: README.md  conftest.py  format_checks.py  test_environment.py  test_notebook_imports.py  test_notebook_structure.py
tests/knowledge-tuning/: AGENTS.md  README.md  __init__.py  conftest.py  pyproject.toml  run_knowledge_tuning_tests.py  run_push_tests.py  test_environment.py  test_notebook_imports.py  test_notebook_structure.py  test_utils.py  test_venv_build.py
tests/knowledge-tuning/format_checks/: test_notebook_structure.py
tests/knowledge-tuning/mocks/: __init__.py  transformers_mock.py
tests/validation/: conftest.py  test_example_metadata.py  test_example_structure.py  test_notebook_content.py  test_notebook_metadata.py  test_notebook_structure.py  test_notebook_syntax.py  test_pyproject_toml.py
(+166 files in other folders)
