[project]
name = "notebook-tests"
version = "0.2.0"
description = "Repo-wide notebook format checks and knowledge-tuning test dependencies"
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-html>=4.0.0",
    "nbformat>=5.9.0",
    "polars>=0.20.0",
    "jsonschema>=4.19.0",
]
# Use tomli for Python < 3.11, tomllib for Python >= 3.11
# tomllib is built-in for Python 3.11+
# tomli is needed for older versions (but we require 3.12+)

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

